<resources>
    <string name="app_name">Bathroom Maps</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_settings">Settings</string>
    <string name="fetch_bathrooms_failure">We couldn\'t fetch bathrooms nearby. (Are you connected to the internet?)</string>
    <string name="fetch_walking_time_ioe_failure">Had trouble calculating walking distance. Press the walk button to see it.</string>
    <string name="unknown_walking_time">Press the walk button for walking time</string>
    <string name="cant_launch_maps">We want to launch Google Maps for navigation, but it doesn\'t appear to be installed on your device.</string>
    <string name="current_location_unavailable">Your location is currently not available...</string>
    <string name="add_review_button">Write a review!</string>
    <string name="review_email_hint">Your email</string>
    <string name="review_text_hint">Write your review!</string>
    <string name="send_review_button">Send your review</string>
    <string name="send_review_succeeded">Your review has been sent!</string>
    <string name="rating_filter_notch_all">All</string>
    <string name="rating_filter_notch_2">>2</string>
    <string name="rating_filter_notch_3">>3</string>
    <string name="rating_filter_notch_4">>4</string>
    <string name="rating_filter_label">Minimum rating:</string>
    <string name="add_bathroom_button">Add bathroom</string>
    <string name="add_bathroom_prompt_title">Want to tell us about a bathroom we don\'t know about? Great!</string>
    <string name="add_bathroom_prompt">Just center the map onto where the bathroom is, enter a name and category, then press \'Add bathroom\'.</string>
    <string name="add_bathroom_name_prompt">Bathroom name</string>
    <string name="add_bathroom_succeeded">Thanks for your submission! We\'ll review it before adding it to our database.</string>
    <string name="add_bathroom_failed">We could not add the bathroom for some reason. (Are you connected to the internet?)</string>
    <string name="add_bathroom_empty_name">Enter a bathroom name!</string>

    <plurals name="review_count">
        <item quantity="one">%d review</item>
        <item quantity="other">%d reviews</item>
    </plurals>
</resources>
