<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <FrameLayout
            android:id="@+id/fragment_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_crosshair"/>
    </FrameLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_bathroom_prompt_title"
        android:layout_margin="@dimen/padding_normal"
        style="@style/TextAppearance.AppCompat.Body2"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_bathroom_prompt"
        android:layout_marginLeft="@dimen/padding_normal"
        android:layout_marginRight="@dimen/padding_normal"
        style="@style/TextAppearance.AppCompat.Body1" />

    <EditText
        android:id="@+id/activity_add_bathroom_name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_bathroom_name_prompt"
        style="@style/BathroomNameEditTextBase"
        android:singleLine="true" />

    <Spinner
        android:id="@+id/activity_add_bathroom_category_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_normal" />

    <Button
        android:id="@+id/activity_add_bathroom_submit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_bathroom_button" />

</LinearLayout>