<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/padding_normal">

    <EditText
        android:id="@+id/fragment_review_email_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_normal"
        style="@style/ReviewEditTextBase"
        android:hint="@string/review_email_hint" />

    <RatingBar
        android:id="@+id/fragment_review_rating_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_normal"
        style="?android:attr/ratingBarStyle"
        android:numStars="5"
        android:stepSize="1" />
    <EditText
        android:id="@+id/fragment_review_text_edit_text"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginBottom="@dimen/spacing_normal"
        android:gravity="top|left"
        android:scrollbars="vertical"
        android:hint="@string/review_text_hint"
        android:singleLine="true"
        style="@style/ReviewEditTextBase" />

    <Button
        android:id="@+id/fragment_review_send_review_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_review_button" />

</LinearLayout>